Fixed relative link paths.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <title>Page Title</title>
-<link rel="stylesheet" href="/css/carousel.css">
-<link rel="stylesheet" href="/css/iframe.css">
-<link rel="stylesheet" href="/css/navbar.css">
+<link rel="stylesheet" href="css/carousel.css">
+<link rel="stylesheet" href="css/iframe.css">
+<link rel="stylesheet" href="css/navbar.css">
 <style>
     table tr td {
         width: 33%;
@@ -51,23 +51,13 @@
                       <span class="dot" onclick="currentSlide(1)"></span> 
                       <span class="dot" onclick="currentSlide(2)"></span> 
                       <span class="dot" onclick="currentSlide(3)"></span> 
-                    </div>
-                    
+                    </div>                   
             </div>
             </td>
             <td></td>
         </tr>
-        <tr>
-            <td></td>
-            <td>
-                <div style="width: 50px; margin: auto;">
-                    <a class="prev" onclick="plusSlides(-1)">❮</a>
-                    <a class="next" onclick="plusSlides(1)">❯</a>
-                </div>
-            </td>
-            <td></td>
-        </tr>
     </table>
+    <br>
     <ul class="navbar">
         <li><a href="index.html">Home</a></li>
         <li><a href="pages/Articles.html">Articles</a></li>
@@ -87,7 +77,13 @@
         <br />
         <br />
     </div>
-
+<footer>
+    <p>Sources</p>
+    <ul>
+        <li>Early, M. |. F. U. P. (2024, February 22). NONO. https://www.mendelian.co/genes/nono</li>
+        <li>NONO-associated X-linked ID syndrome. (2021). Unique. Retrieved February 24, 2024, from https://rarechromo.org/media/singlegeneinfo/Single%20Gene%20Disorder%20Guides/NONO-associated%20X-linked%20ID%20syndrome%20QFN.pdf</li>
+    </ul>
+</footer>
     <script>
         let slideIndex = 0;
         showSlides();
