--- a/pages/Articles.html
+++ b/pages/Articles.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <title>Page Title</title>
-<link rel="stylesheet" href="/css/carousel.css">
-<link rel="stylesheet" href="/css/iframe.css">
-<link rel="stylesheet" href="/css/navbar.css">
+<link rel="stylesheet" href="../css/carousel.css">
+<link rel="stylesheet" href="../css/iframe.css">
+<link rel="stylesheet" href="../css/navbar.css">
 <style>
     table tr td {
         width: 33%;
