--- a/pages/Resources.html
+++ b/pages/Resources.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <title>Page Title</title>
-<link rel="stylesheet" href="/css/carousel.css">
-<link rel="stylesheet" href="/css/iframe.css">
-<link rel="stylesheet" href="/css/navbar.css">
+<link rel="stylesheet" href="../css/carousel.css">
+<link rel="stylesheet" href="../css/iframe.css">
+<link rel="stylesheet" href="../css/navbar.css">
 <style>
     table tr td {
         width: 33%;
@@ -34,15 +34,15 @@
             <td>
                 <div class="slideshow-container">
                     <div class="mySlides fade">
-                      <img src="images/dna-helix.jpg">
+                      <img src="../images/dna-helix.jpg">
                     </div>
                     
                     <div class="mySlides fade">
-                      <img src="images/doctor-cartoon.jpg">
+                      <img src="../images/doctor-cartoon.jpg">
                     </div>
                     
                     <div class="mySlides fade">
-                      <img src="images/nurse.jpg">
+                      <img src="../images/nurse.jpg">
                     </div>
 
                     <br>
