--- a/pages/Symptoms.html
+++ b/pages/Symptoms.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>Page Title</title>
-<link rel="stylesheet" href="/css/carousel.css">
-<link rel="stylesheet" href="/css/iframe.css">
+<link rel="stylesheet" href="../css/carousel.css">
+<link rel="stylesheet" href="../css/iframe.css">
 <link rel="stylesheet" href="../css/navbar.css">
 <style>
     table tr td {
