Moved repeated css to separate css file. Fixed formatting. Fixed iFrame flowing off div.

--- a/index.html
+++ b/index.html
@@ -5,30 +5,14 @@
 <link rel="stylesheet" href="css/carousel.css">
 <link rel="stylesheet" href="css/iframe.css">
 <link rel="stylesheet" href="css/navbar.css">
+<link rel="stylesheet" href="css/site.css">
 <style>
-    table tr td {
-        width: 33%;
-    }
 
-  #center-col {
-    width: 75%;
-        margin: auto;
-        background-color: lightgray;
-        padding: 10px 50px 10px 50px;
-        height: 90vh;
-  }
 
-  #page-title {
-    text-align: center;
-  }
-
-  .main-text {
-    font-size: 20px;
-  }
 </style>
 </head>
 <body>
-    <table>
+    <table id="carousel-table">
         <tr>
             <td></td>
             <td>
@@ -67,23 +51,24 @@
     <br>
     <div id="center-col">
         <h1 id="page-title">NONO-Associated X-linked ID Syndrome</h1><br><hr><br>
+    
         <p class="main-text">
             When children are conceived, the genetic material is copied in the egg and sperm that make a new child. The biological copying method is not perfect, and random rare changes occur in the genetic code of children that are not seen in the DNA of their parents. This happens naturally and is not due to any lifestyle, dietary or environmental factors. No one is to blame and nobody is at fault. Such changes happen to everyone but it’s only when a change affects an important gene that health and/or development are affected. <br />In most children diagnosed with NONO-associated X-linked ID syndrome so far, the change in the NONO gene occurred by chance in that child (this is known as de novo ) and was not found in their parents. However, a few children are known to have inherited a pathogenic variant of the NONO gene from an unaffected or mildly affected mother.NONO-associated X-linked ID syndrome is very rare. Currently (March 2021) 11 children with this diagnosis have been reported in the medical literature. It is expected that more children will be diagnosed with this condition as awareness increases and genetic testing becomes more routine. It is important to know that the most severely affected children are likely to be the first identified so initial findings may not represent the possible spectrum of symptom severity.
         </p>
         <div id="wrap">
-            <iframe id="frame" src="https://www.youtube.com/embed/mjfhST8diYo?si=ylGgawLD8Bv0zbBt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </div>           
-        <br />
-        <br />
-        <br />
+          <iframe id="frame" src="https://www.youtube.com/embed/mjfhST8diYo?si=ylGgawLD8Bv0zbBt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>  
+
     </div>
-<footer>
-    <p>Sources</p>
-    <ul>
-        <li>Early, M. |. F. U. P. (2024, February 22). NONO. https://www.mendelian.co/genes/nono</li>
-        <li>NONO-associated X-linked ID syndrome. (2021). Unique. Retrieved February 24, 2024, from https://rarechromo.org/media/singlegeneinfo/Single%20Gene%20Disorder%20Guides/NONO-associated%20X-linked%20ID%20syndrome%20QFN.pdf</li>
-    </ul>
-</footer>
+<div>
+  <p>Sources</p>
+  <ul>
+      <li>Early, M. |. F. U. P. (2024, February 22). NONO. https://www.mendelian.co/genes/nono</li>
+      <li>NONO-associated X-linked ID syndrome. (2021). Unique. Retrieved February 24, 2024, from https://rarechromo.org/media/singlegeneinfo/Single%20Gene%20Disorder%20Guides/NONO-associated%20X-linked%20ID%20syndrome%20QFN.pdf</li>
+  </ul>
+</div>
+
+
     <script>
         let slideIndex = 0;
         showSlides();
