--- a/pages/Resources.html
+++ b/pages/Resources.html
@@ -5,30 +5,13 @@
 <link rel="stylesheet" href="../css/carousel.css">
 <link rel="stylesheet" href="../css/iframe.css">
 <link rel="stylesheet" href="../css/navbar.css">
+<link rel="stylesheet" href="../css/site.css">
 <style>
-    table tr td {
-        width: 33%;
-    }
 
-  #center-col {
-    width: 75%;
-        margin: auto;
-        background-color: lightgray;
-        padding: 10px 50px 10px 50px;
-        height: 90vh;
-  }
-
-  #page-title {
-    text-align: center;
-  }
-
-  .main-text {
-    font-size: 20px;
-  }
 </style>
 </head>
 <body>
-    <table>
+    <table id="carousel-table">
         <tr>
             <td></td>
             <td>
@@ -57,17 +40,8 @@
             </td>
             <td></td>
         </tr>
-        <tr>
-            <td></td>
-            <td>
-                <div style="width: 50px; margin: auto;">
-                    <a class="prev" onclick="plusSlides(-1)">❮</a>
-                    <a class="next" onclick="plusSlides(1)">❯</a>
-                </div>
-            </td>
-            <td></td>
-        </tr>
     </table>
+    <br>
     <ul class="navbar">
         <li><a href="../index.html">Home</a></li>
         <li><a href="Articles.html">Articles</a></li>
