--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>NONO-Associated X-linked ID Syndrome - Home</title>
 <link rel="stylesheet" href="css/carousel.css">
 <link rel="stylesheet" href="css/iframe.css">
 <link rel="stylesheet" href="css/navbar.css">
 <link rel="stylesheet" href="css/site.css">
 <style>
-
+#carousel-table tr td {
+  width: 33%;
+}
 
 </style>
 </head>
@@ -58,17 +60,16 @@
         <div id="wrap">
           <iframe id="frame" src="https://www.youtube.com/embed/mjfhST8diYo?si=ylGgawLD8Bv0zbBt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       </div>  
-
+      <br><hr><br>
+<p>Sources</p>
+<ul>
+    <li>Early, M. |. F. U. P. (2024, February 22). NONO. https://www.mendelian.co/genes/nono</li>
+    <li>NONO-associated X-linked ID syndrome. (2021). Unique. Retrieved February 24, 2024, from https://rarechromo.org/media/singlegeneinfo/Single%20Gene%20Disorder%20Guides/NONO-associated%20X-linked%20ID%20syndrome%20QFN.pdf</li>
+</ul>
     </div>
 <div>
-  <p>Sources</p>
-  <ul>
-      <li>Early, M. |. F. U. P. (2024, February 22). NONO. https://www.mendelian.co/genes/nono</li>
-      <li>NONO-associated X-linked ID syndrome. (2021). Unique. Retrieved February 24, 2024, from https://rarechromo.org/media/singlegeneinfo/Single%20Gene%20Disorder%20Guides/NONO-associated%20X-linked%20ID%20syndrome%20QFN.pdf</li>
-  </ul>
+
 </div>
-
-
     <script>
         let slideIndex = 0;
         showSlides();
